[tool.poetry]
name = "yfinance-mcp"
version = "0.1.0"
description = "Custom yfinance MCP server for idio project - single flexible tool design"
authors = ["bxxd <bxxd@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.48"
mcp = "^1.1.2"

[tool.poetry.scripts]
yfinance-mcp = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
